# docx_to_psd

./: app.py  app2.py  file.docx  main.py  pyproject.toml  sample2.docx
